Added need statement and mission, more images.

--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -62,8 +62,10 @@
         <article class="post">
             <header>
                 <div class="post-title">
-                    <h2><a href="{% url 'about' %}">Magna sed adipiscing</a></h2>
-                    <p>Lorem ipsum dolor amet nullam consequat etiam feugiat</p>
+                    <h2><a href="{% url 'about' %}">Statement of need</a></h2>
+                    <p>We know that more than 50 % of the rural population in Zimbabwe is  affected by Food insecurity.
+There is a serious lack of balance diet where Up to 75 % do not consume protein regularly.
+We also k now that there is a rapid Increase in child malnutrition and stunted growth as well as wasting</p>
                 </div>
                 <div class="meta">
                     <time class="published" datetime="2015-11-01">November 1, 2015</time>
@@ -74,10 +76,13 @@
             </header>
             <a href="{% url 'about' %}" class="image featured"><img
                     src="{% static 'images/woman-pinkshirt-foreground.jpg' %}" alt=""/></a>
-            <p>Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod
-                placerat. Vivamus porttitor magna enim, ac accumsan tortor cursus at. Phasellus sed ultricies mi non
-                congue ullam corper. Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta
-                lectus vitae, ultricies congue gravida diam non fringilla.</p>
+            <p>Why crickets? Crickets are a part of our food culture. My family and others in the community would forage crickets during the lean season. By farming them, we can make them available throughout the year. They have 2.5 times more protein than chicken and a third of the cost of chicken.
+They are climate smart in 3 ways
+    <li>• they need half the feed,
+    • 10x less water than chicken;
+    • and one can produce large volumes in a small plot of land.
+            Finally they are so easy to farm that even those with disabilities or children can be involved.</li>
+</p>
             <footer>
                 <ul class="actions">
                 </ul>
