--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "blog_base.html" %}
 {% load custom_blog_tags %}
 {% block title %}{{ post.title|safe }}{% endblock %}
 
