Changed web manifest, added javascript cache script, lang tag

--- a/static/webapp/css/style.css
+++ b/static/webapp/css/style.css
@@ -459,7 +459,7 @@ ul.contact li a.icon-rss:before {
 
 #copyright a {
     text-decoration: none;
-    color: rgba(255, 255, 255, 0.6);
+    color: rgb(35 68 111);
 }
 
 
