--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -1,5 +1,6 @@
 {% load static %}
 <!DOCTYPE HTML>
+<html lang="en">
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
@@ -14,7 +15,7 @@
     <meta name="language" content="English">
     <meta name="revisit-after" content="7 days">
     <meta name="author" content="Esnath Divasoni">
-    <link rel="manifest" href="/site.webmanifest">
+    <link rel="manifest" href="{% url /site.webmanifest %}">
     <link href="http://fonts.googleapis.com/css?family=Didact+Gothic" rel="stylesheet"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="{% static "webapp/css/normalize.css" %}">
@@ -24,6 +25,14 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta http-equiv=X-UA-Compatible content=" IE=edge,chrome=1">
     <meta name="HandheldFriendly" content="true">
+    <script type="text/javascript">
+        var bodyCacheable = true;
+
+        var exclusionReason =
+            {"shouldRender": true, "forced": false};
+        var ssrInfo = {"renderBodyTime": 327}
+
+    </script>
 
     <!--[if IE 6]>
     <link href="default_ie6.css" rel="stylesheet" type="text/css"/><![endif]-->
