--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -43,24 +43,24 @@
     <div id="topheader" class="container">
         <div id="logo">
         </div>
-    <div class="navbar">
-		<div class="inner_navbar">
-			<div class="logo">
-				<a href="#"><span>GCET</span></a>
-			</div>
-			<div class="menu">
-				<ul>
-					<li><a href="#" class="active">Home</a></li>
-					<li><a href="#">About Us</a></li>
-					<li><a href="{% url 'blog:post_list.html' %}">Blog</a></li>
-					<li><a href="#">Gallery</a></li>
-				</ul>
-			</div>
-		</div>
-		<div class="hamburger">
-			<i class="fas fa-bars"></i>
-		</div>
-	</div>
+        <div class="navbar">
+            <div class="inner_navbar">
+                <div class="logo">
+                    <a href="#"><span>GCET</span></a>
+                </div>
+                <div class="menu">
+                    <ul>
+                        <li><a href="#" class="active">Home</a></li>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="{% url 'blog:post_list' %}">Blog</a></li>
+                        <li><a href="#">Gallery</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="hamburger">
+                <i class="fas fa-bars"></i>
+            </div>
+        </div>
     </div>
     <div id="banner" class="container">
         <div class="title">
@@ -137,7 +137,15 @@
         </ul>
     </div>
 </div>
+<div class="modal-footer">
+    <footer>
+
+    </footer>
+</div>
 <div id="copyright" class="container">
     <p><a href="https://thejordanmiracle.com">&copy; Miracle 2021</a>
 </div>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 </body>
+
