--- a/static/webapp/css/style.css
+++ b/static/webapp/css/style.css
@@ -5,8 +5,7 @@ object, iframe, h1, h2, h3, h4, h5, h6, p,
 blockquote, pre, a, address,
 img, ins, kbd, q, s, samp, small, strike, strong,
 sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset,
-form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article,
-footer, hgroup {
+form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, hgroup {
     max-width: 100%;
     padding: 0;
     margin: auto;
@@ -33,7 +32,6 @@ body {
 .flexbox > div {
     flex: 1;
 }
-
 
 h1, h2, h3 {
     margin: 0;
