--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -4,14 +4,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %}</title>
     <link href="{% static 'blog/css/blog.css' %}" rel="stylesheet">
 </head>
 <body>
-<div id="content">
 
-</div>
 {% block content %}{% endblock %}
 
 
