--- a/webapp/templates/base.html
+++ b/webapp/templates/base.html
@@ -1,30 +1,40 @@
 {% load static %}
-<!DOCTYPE html>
-<html>
-    {# Make modifiable head elements #}
-    <head>
-        <title>{% block title %}Blog {% endblock title %} | CRM Easy</title>
-        {% block head_favicon %}
-        {% endblock head_favicon %}
-        {% block head_meta %}
-            {% block head_meta_charset %}
-                <meta http-equiv="Content-Type"
-                      content="text/html; charset=utf-8" />
-            {% endblock head_meta_charset %}
-            {% block head_meta_contentlanguage %}
-                <meta http-equiv="Content-Language" value="en-US" />
-            {% endblock head_meta_contentlanguage %}
-            {% block head_meta_viewport %}
-                <meta name="viewport"
-                      content="width=device-width, initial-scale=1.0">
-            {% endblock head_meta_viewport %}
-        {% endblock head_meta %}
-        {% block head_css %}
-            {% block head_css_site %}
-                <link href="{% static 'webapp/css/style.css' %}"/>
-                      rel="stylesheet" media="screen">
-            {% endblock head_css_site %}
-            {% block head_css_section %}{% endblock head_css_section %}
-            {% block head_css_page %}{% endblock head_css_page %}
-        {% endblock head_css %}
-    </head>
+
+<head>{% block head %}
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <title>Jumping Protein</title>
+    <meta name="title" content="Jumping Protein">
+    <meta name="description"
+          content="Jumping protein is a division of the Glorified Community Empowerment Trust. We have a vision of an economically limitless Africa. ">
+    <meta name="keywords"
+          content="Sustainability, farming, protein, hunger, climate, poverty, economy, business, education, empowerment, Basic needs, Development">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="English">
+    <meta name="revisit-after" content="7 days">
+    <meta name="author" content="Esnath Divasoni">
+    <link rel="manifest" href="{% static 'jumpingprotein/manifest.webmanifest' %}">
+    <link href="http://fonts.googleapis.com/css?family=Didact+Gothic" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="{% static "webapp/css/normalize.css" %}">
+
+    <link rel="stylesheet" href="{% static "webapp/css/style.css" %}">
+    <link href="{% static "webapp/css/fonts.css" %}" rel="stylesheet" type="text/css" media="all"/>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta http-equiv=X-UA-Compatible content=" IE=edge,chrome=1">
+    <meta name="HandheldFriendly" content="true">
+    <script type="text/javascript">
+        var bodyCacheable = true;
+
+        var exclusionReason =
+            {"shouldRender": true, "forced": false};
+        var ssrInfo = {"renderBodyTime": 327}
+
+    </script>
+
+    <!--[if IE 6]>
+    <link href="default_ie6.css" rel="stylesheet" type="text/css"/><![endif]-->
+{% endblock head %}
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
