added django template tags for <head> and navbar. and extended the base.html.

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,4 +1,4 @@
-{% extends "blog_base.html" %}
+{% extends "blog/base.html" %}
 {% load custom_blog_tags %}
 {% block title %}{{ post.title|safe }}{% endblock %}
 
