--- a/webapp/templates/about.html
+++ b/webapp/templates/about.html
@@ -1,12 +1,17 @@
+{% extends 'base.html' %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head>{% block head %}{%  endblock head %}
     <meta charset="UTF-8">
     <title>Title</title>
+
 </head>
 <body>
+{% block navbar %}
 
-This is About Us.
+{% endblock navbar %}
+
+
 
 </body>
 </html>
