--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -36,6 +36,7 @@
 
     <!--[if IE 6]>
     <link href="default_ie6.css" rel="stylesheet" type="text/css"/><![endif]-->
+
 </head>
 
 <body>
@@ -43,7 +44,6 @@
     <div id="topheader" class="container">
         <div id="logo">
         </div>
-        {% block navbar %}
         <div class="navbar">
             <div class="inner_navbar">
                 <div class="logo">
@@ -62,7 +62,6 @@
                 <i class="fas fa-bars"></i>
             </div>
         </div>
-        {% endblock navbar %}
     </div>
     <div id="banner" class="container">
         <div class="title">
@@ -78,7 +77,7 @@
     <div id="three-column">
         <div class="banner">
 
-        </div>
+        </div>i
         <div class="title">
             <h2>Our Mission</h2>
             <span class="byline">To promote healthier communities through the farming of insects for human and animal consumption.</span>
@@ -117,7 +116,6 @@
             </footer>
         </article>
 
-
     </div>
 
 </div>
@@ -147,6 +145,6 @@
     <p><a href="https://thejordanmiracle.com">&copy; Miracle 2021</a>
 </div>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 </body>
 
