--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -19,7 +19,13 @@
     <link href="http://fonts.googleapis.com/css?family=Didact+Gothic" rel="stylesheet"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="{% static "webapp/css/normalize.css" %}">
-
+    <link rel="stylesheet" href="{% static 'webapp/css/animate.css' %}">
+    <!-- Icomoon Icon Fonts-->
+    <link rel="stylesheet" href="{% static 'webapp/css/icomoon.css' %}">
+    <!-- Bootstrap  -->
+    <link rel="stylesheet" href="{% static 'webapp/css/bootstrap.css' %}">
+    <!-- Superfish -->
+    <link rel="stylesheet" href="{% static 'webapp/css/superfish.css' %}">
     <link rel="stylesheet" href="{% static "webapp/css/style.css" %}">
     <link href="{% static "webapp/css/fonts.css" %}" rel="stylesheet" type="text/css" media="all"/>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
@@ -73,78 +79,238 @@
         </ul>
     </div>
 </div>
-<div id="wrapper">
-    <div id="three-column">
-        <div class="banner">
 
-        </div>i
-        <div class="title">
-            <h2>Our Mission</h2>
-            <span class="byline">To promote healthier communities through the farming of insects for human and animal consumption.</span>
-        </div>
-        <article class="post">
-            <header>
-                <div class="post-title">
-                    <h2><a href="{% url 'about' %}">Statement of need</a></h2>
-                    <p>We know that more than 50 % of the rural population in Zimbabwe is affected by Food insecurity.
-                        There is a serious lack of balance diet where Up to 75 % do not consume protein regularly.
-                        We also k now that there is a rapid Increase in child malnutrition and stunted growth as well as
-                        wasting</p>
-                </div>
-                <div class="meta">
-                    <time class="published" datetime="2015-11-01">November 1, 2015</time>
-                    <a href="#" class="author"><span class="name">Jane Doe</span><img
-                            src="{% static 'webapp/images/older-gentleman.jpg' %}"
-                            alt=""/></a>
-                </div>
-            </header>
-            <a href="{% url 'about' %}" class="image featured"><img
-                    src="{% static 'images/woman-pinkshirt-foreground.jpg' %}" alt=""/></a>
-            <p>Why crickets? Crickets are a part of our food culture. My family and others in the community would forage
-                crickets during the lean season. By farming them, we can make them available throughout the year. They
-                have 2.5 times more protein than chicken and a third of the cost of chicken.
-                They are climate smart in 3 ways
-            <ul>• they need half the feed,
-                • 10x less water than chicken;
-                • and one can produce large volumes in a small plot of land.
-                Finally they are so easy to farm that even those with disabilities or children can be involved.
-            </ul>
-            <footer>
-                <ul class="actions">
-                </ul>
 
-            </footer>
-        </article>
-
-    </div>
-
-</div>
-
-<div id="welcome">
+<div id="fh5co-feature-product" class="fh5co-section-gray">
     <div class="container">
-        <div class="title">
-            <h2>Fusce ultrices fringilla metus</h2>
-            <span class="byline">Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue</span>
+        <div class="row">
+            <div class="col-md-12 text-center heading-section">
+                <h3>Our Mission</h3>
+                <p> To promote healthier communities through the farming of insects for human and animal
+                    consumption.</p>
+            </div>
         </div>
-        <p>This is <strong>Lorikeet</strong>, a free, fully standards-compliant CSS template designed by <a
-                href="http://templated.co" rel="nofollow">TEMPLATED</a>. The photos in this template are from <a
-                href="http://fotogrph.com/"> Fotogrph</a>. This free template is released under the <a
-                href="http://templated.co/license">Creative Commons Attribution</a> license, so you're pretty much free
-            to do whatever you want with it (even use it commercially) provided you give us credit for it. Have fun :)
-        </p>
-        <ul class="actions">
-            <li><a href="#" class="button">Etiam posuere</a></li>
-        </ul>
+
+        <div class="row row-bottom-padded-md">
+            <div class="col-md-12 text-center animate-box">
+                <p><img src="{% static 'webapp/images/group-sitting.webp' %}" alt="Free HTML5 Bootstrap Template" class="img-responsive">
+                </p>
+            </div>
+            <div class="col-md-6 text-center animate-box">
+                <p><img src="{% static 'webapp/images/older-gentleman.webp' %}" alt="Free HTML5 Bootstrap Template" class="img-responsive">
+                </p>
+            </div>
+            <div class="col-md-6 text-center animate-box">
+                <img src="{% static 'webapp/images/woman-pinkshirt-foreground.webp' %}" alt="Free HTML5 Bootstrap Template" class="img-responsive">
+
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="feature-text">
+                    <h3>Love</h3>
+                    <p>Far far away, behind the word mountains, far from the countries Vokalia and
+                        Consonantia,
+                        there live the blind texts.</p>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="feature-text">
+                    <h3>Compassion</h3>
+                    <p>Far far away, behind the word mountains, far from the countries Vokalia and
+                        Consonantia,
+                        there live the blind texts.</p>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="feature-text">
+                    <h3>Charity</h3>
+                    <p>Far far away, behind the word mountains, far from the countries Vokalia and
+                        Consonantia,
+                        there live the blind texts.</p>
+                </div>
+            </div>
+        </div>
+
     </div>
 </div>
-<div class="modal-footer">
-    <footer>
-    </footer>
+
+
+<div id="fh5co-portfolio">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 col-md-offset-3 text-center heading-section animate-box">
+                <h3>Our Gallery</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit est facilis maiores,
+                    perspiciatis accusamus asperiores sint consequuntur debitis.</p>
+            </div>
+        </div>
+        <div class="row row-bottom-padded-md">
+            <div class="col-md-12">
+                <ul id="fh5co-portfolio-list">
+
+                    <li class="two-third animate-box" data-animate-effect="fadeIn"
+                        style="background-image: url({% static 'webapp/images/woman-pinkshirt-foreground.webp' %}); ">
+                        <a href="#" class="color-3">
+                            <div class="case-studies-summary">
+                                <span>Give Love</span>
+                                <h2>Donation is caring</h2>
+                            </div>
+                        </a>
+                    </li>
+
+                    <li class="one-third animate-box" data-animate-effect="fadeIn"
+                        style="background-image: url(images/cover_bg_3.jpg); ">
+                        <a href="#" class="color-4">
+                            <div class="case-studies-summary">
+                                <span>Give Love</span>
+                                <h2>Donation is caring</h2>
+                            </div>
+                        </a>
+                    </li>
+
+                    <li class="one-third animate-box" data-animate-effect="fadeIn"
+                        style="background-image: url(images/cover_bg_1.jpg); ">
+                        <a href="#" class="color-5">
+                            <div class="case-studies-summary">
+                                <span>Give Love</span>
+                                <h2>Donation is caring</h2>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="two-third animate-box" data-animate-effect="fadeIn"
+                        style="background-image: url(images/cover_bg_3.jpg); ">
+                        <a href="#" class="color-6">
+                            <div class="case-studies-summary">
+                                <span>Give Love</span>
+                                <h2>Donation is caring</h2>
+                            </div>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-4 col-md-offset-4 text-center animate-box">
+                <a href="#" class="btn btn-primary btn-lg">See Gallery</a>
+            </div>
+        </div>
+
+
+    </div>
 </div>
-<div id="copyright" class="container">
-    <p><a href="https://thejordanmiracle.com">&copy; Miracle 2021</a>
-</div>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+
+
+<div id="fh5co-content-section" class="fh5co-section-gray">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8 col-md-offset-2 text-center heading-section animate-box">
+                <h3>Leadership</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit est facilis maiores,
+                    perspiciatis accusamus asperiores sint consequuntur debitis.</p>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="fh5co-team text-center animate-box">
+                    <figure>
+                        <img src="images/person_1.jpg" alt="user">
+                    </figure>
+
+                    <div>
+                        <h3>Jean Doe</h3>
+                        <p><span>Founder</span></p>
+                        <p>Far far away, behind the word mountains, far from the countries Vokalia and
+                            Consonantia, there live the blind texts. Far far away, behind the word
+                            mountains,
+                            far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                    </div>
+
+                    <p class="fh5co-social-icons">
+                        <a href="#"><i class="icon-twitter2"></i></a>
+                        <a href="#"><i class="icon-linkedin2"></i></a>
+                        <a href="#"><i class="icon-facebook3"></i></a>
+                    </p>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="fh5co-team text-center animate-box">
+                    <figure>
+                        <img src="{% static 'webapp/images/children-esnath-bin.jpg' %}"
+                             alt="Children in Community">
+                    </figure>
+                    <div>
+                        <h3>John Doe</h3>
+                        <p><span>Founder</span></p>
+                        <p>Far far away, behind the word mountains, far from the countries Vokalia and
+                            Consonantia, there live the blind texts. Far far away, behind the word
+                            mountains,
+                            far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                    </div>
+                    <p class="fh5co-social-icons">
+                        <a href="#"><i class="icon-twitter2"></i></a>
+                        <a href="#"><i class="icon-linkedin2"></i></a>
+                        <a href="#"><i class="icon-facebook3"></i></a>
+                    </p>
+                </div>
+            </div>
+
+
+        </div>
+
+    </div>
+
+    <div id="welcome">
+        <div class="container">
+            <div class="title">
+                <h2>Fusce ultrices fringilla metus</h2>
+                <span class="byline">Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue</span>
+            </div>
+            <p>This is <strong>Lorikeet</strong>, a free, fully standards-compliant CSS template designed by
+                <a
+                        href="http://templated.co" rel="nofollow">TEMPLATED</a>. The photos in this template
+                are
+                from <a
+                        href="http://fotogrph.com/"> Fotogrph</a>. This free template is released under the
+                <a
+                        href="http://templated.co/license">Creative Commons Attribution</a> license, so
+                you're
+                pretty much free
+                to do whatever you want with it (even use it commercially) provided you give us credit for
+                it.
+                Have fun :)
+            </p>
+            <ul class="actions">
+                <li><a href="#" class="button">Etiam posuere</a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="modal-footer">
+        <footer>
+        </footer>
+    </div>
+    <div id="copyright" class="container">
+        <p><a href="https://thejordanmiracle.com">&copy; Miracle 2021</a>
+    </div>
+    <script src="{% static 'js/jquery.min.js' %}"></script>
+    <!-- jQuery Easing -->
+    <script src="{% static 'js/jquery.easing.1.3.js' %}"></script>
+    <!-- Bootstrap -->
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <!-- Waypoints -->
+    <script src="{% static 'js/jquery.waypoints.min.js' %}"></script>
+    <script src="{% static 'js/sticky.js' %}"></script>
+
+    <!-- Stellar -->
+    <script src="{% static 'js/jquery.stellar.min.js' %}"></script>
+    <!-- Superfish -->
+    <script src="{% static 'js/hoverIntent.js' %}"></script>
+    <script src="{% static 'js/superfish.js' %}"></script>
+
+    <!-- Main JS -->
+    <script src="{% static 'js/main.js' %}"></script>
 </body>
 
