--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -15,7 +15,9 @@
     <meta name="language" content="English">
     <meta name="revisit-after" content="7 days">
     <meta name="author" content="Esnath Divasoni">
-    <link rel="manifest" href="{% static 'jumpingprotein/manifest.webmanifest' %}">
+    <link rel="manifest" href="/manifest.webmanifest">
+    <link rel="stylesheet" href="{% static "webapp/css/style.css" %}">
+
     <link href="http://fonts.googleapis.com/css?family=Didact+Gothic" rel="stylesheet"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="{% static "webapp/css/normalize.css" %}">
@@ -26,7 +28,6 @@
     <link rel="stylesheet" href="{% static 'webapp/css/bootstrap.css' %}">
     <!-- Superfish -->
     <link rel="stylesheet" href="{% static 'webapp/css/superfish.css' %}">
-    <link rel="stylesheet" href="{% static "webapp/css/style.css" %}">
     <link href="{% static "webapp/css/fonts.css" %}" rel="stylesheet" type="text/css" media="all"/>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta http-equiv=X-UA-Compatible content=" IE=edge,chrome=1">
@@ -93,15 +94,16 @@
 
         <div class="row row-bottom-padded-md">
             <div class="col-md-12 text-center animate-box">
-                <p><img src="{% static 'webapp/images/group-sitting.webp' %}" alt="Free HTML5 Bootstrap Template" class="img-responsive">
-                </p>
+                <p><img src="{% static 'webapp/images/group-sitting.webp' %}" alt="Free HTML5 Bootstrap Template"
+                        class="img-responsive"></p>
             </div>
             <div class="col-md-6 text-center animate-box">
-                <p><img src="{% static 'webapp/images/older-gentleman.webp' %}" alt="Free HTML5 Bootstrap Template" class="img-responsive">
-                </p>
+                <p><img src="{% static 'webapp/images/older-gentleman.webp' %}" alt="Free HTML5 Bootstrap Template"
+                        class="img-responsive"></p>
             </div>
             <div class="col-md-6 text-center animate-box">
-                <img src="{% static 'webapp/images/woman-pinkshirt-foreground.webp' %}" alt="Free HTML5 Bootstrap Template" class="img-responsive">
+                <p><img src="{% static 'webapp/images/woman-pinkshirt-foreground.webp' %}"
+                        alt="Free HTML5 Bootstrap Template" class="img-responsive"></p>
 
             </div>
         </div>
@@ -221,7 +223,7 @@
                     </figure>
 
                     <div>
-                        <h3>Jean Doe</h3>
+                        <h3>Esnath Divasoni</h3>
                         <p><span>Founder</span></p>
                         <p>Far far away, behind the word mountains, far from the countries Vokalia and
                             Consonantia, there live the blind texts. Far far away, behind the word
@@ -243,7 +245,7 @@
                              alt="Children in Community">
                     </figure>
                     <div>
-                        <h3>John Doe</h3>
+                        <h3>Mr. Lameck Marondera</h3>
                         <p><span>Founder</span></p>
                         <p>Far far away, behind the word mountains, far from the countries Vokalia and
                             Consonantia, there live the blind texts. Far far away, behind the word
